--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 decorator==5.1.1
+dnspython==2.5.0
+email-validator==2.1.0.post1
 executing==2.0.1
 Faker==23.1.0
 Flask==3.0.2
